spade-tests/src/snapshots/spade_tests__parser__array_shorthand_signed_length.snap
---
source: spade-tests/src/parser.rs
---
fn test() {
    let _ = [1u2; 2i];
}


error: Unexpected `identifier`, expected `]`
  ┌─ testinput:2:20
  │
2 │     let _ = [1u2; 2i];
  │                    ^ expected `]`
