spade-tests/src/snapshots/spade_tests__parser__empty_decl_error.snap
---
source: spade-tests/src/parser.rs
assertion_line: 130
---
fn a() {
    decl;
}

error: Found empty decl statement
  ┌─ testinput:2:5
  │
2 │     decl;
  │     ^^^^ decl doesn't declare anything


