spade-tests/src/snapshots/spade_tests__parser__functions_do_not_allow_inst_entity.snap
---
source: spade-tests/src/parser.rs
---
entity Y() -> bool { false }

fn X() -> bool {
    inst Y()
}


error: cannot instantiate entities and pipelines in functions
  ┌─ testinput:4:5
  │
3 │ fn X() -> bool {
  │ -- this is a function
4 │     inst Y()
  │     ^^^^ inst not allowed here
  │
  = note: functions can only contain combinatorial logic
  = consider making the function an entity
  │
3 │ entity X() -> bool {
  │ ~~~~~~
